Fix overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #0F0F0F;
     margin: 0;
+    overflow-x: hidden;
 }
 
 html {
